@@ -2,7 +2,7 @@
 
    GNU Chess protocol adapter
 
-   Copyright (C) 2001-2011 Free Software Foundation, Inc.
+   Copyright (C) 2001-2015 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -26,6 +26,7 @@
 #include <cctype>
 #include <cstdio>
 #include <cstdlib>
+#include <cstring>
 
 #include "board.h"
 #include "colour.h"
@@ -41,12 +42,31 @@ namespace adapter {
 
 // const char * StartFen = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w HAha - 0 1";
 const char * StartFen = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1";
+static const int StringSize = 4096;
 
 // variables
 
 static const bool Strict = false;
 
 // functions
+
+// fen_fatal()
+
+void fen_fatal(const char format[], int pos, const char fen[])
+{
+   char errorMsg[StringSize]="";
+   char pointerStr[StringSize]="";
+   for ( int i=0; i<pos; ++i ) {
+      strcat( pointerStr, " " );
+   }
+   strcat( pointerStr, "*" );
+   sprintf( errorMsg, format, pos );
+   strcat( errorMsg, fen );
+   strcat( errorMsg, "\n" );
+   strcat( errorMsg, pointerStr );
+   strcat( errorMsg, "\n" );
+   my_fatal( errorMsg );
+}
 
 // board_from_fen()
 
@@ -81,7 +101,7 @@ bool board_from_fen(board_t * board, const char string[]) {
          if (c >= '1' && c <= '8') { // empty square(s)
 
             len = c - '0';
-            if (file + len > 8) my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+            if (file + len > 8) fen_fatal("board_from_fen(): bad FEN (a file was expected at pos=%d)\n",pos,string);
 
             for (i = 0; i < len; i++) {
                board->square[sq++] = Empty;
@@ -91,7 +111,7 @@ bool board_from_fen(board_t * board, const char string[]) {
          } else { // piece
 
             piece = piece_from_char(c);
-            if (piece == PieceNone256) my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+            if (piece == PieceNone256) fen_fatal("board_from_fen(): bad FEN (a piece was expected at pos=%d)\n",pos,string);
 
             if (piece_is_king(piece)) king_pos[piece_colour(piece)] = sq;
 
@@ -103,14 +123,14 @@ bool board_from_fen(board_t * board, const char string[]) {
       }
 
       if (rank > 0) {
-         if (c != '/') my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+         if (c != '/') fen_fatal("board_from_fen(): bad FEN ('/' was expected at pos=%d)\n",pos,string);
          c = string[++pos];
      }
    }
 
    // active colour
 
-   if (c != ' ') my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+   if (c != ' ') fen_fatal("board_from_fen(): bad FEN (a space was expected at pos=%d)\n",pos,string);
    c = string[++pos];
 
    switch (c) {
@@ -121,7 +141,7 @@ bool board_from_fen(board_t * board, const char string[]) {
       board->turn = Black;
       break;
    default:
-      my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      fen_fatal("board_from_fen(): bad FEN (the active colour ('w' or 'b') was expected at pos=%d)\n",pos,string);
       break;
    }
 
@@ -129,7 +149,7 @@ bool board_from_fen(board_t * board, const char string[]) {
 
    // castling
 
-   if (c != ' ') my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+   if (c != ' ') fen_fatal("board_from_fen(): bad FEN (a space was expected at pos=%d)\n",pos,string);
    c = string[++pos];
 
    board->castle[White][SideH] = SquareNone;
@@ -211,7 +231,7 @@ bool board_from_fen(board_t * board, const char string[]) {
 
          } else {
 
-            my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+            fen_fatal("board_from_fen(): bad FEN (invalid castling availability at pos=%d)\n",pos,string);
          }
 
          c = string[++pos];
@@ -221,7 +241,7 @@ bool board_from_fen(board_t * board, const char string[]) {
 
    // en-passant
 
-   if (c != ' ') my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+   if (c != ' ') fen_fatal("board_from_fen(): bad FEN (a space was expected at pos=%d)\n",pos,string);
    c = string[++pos];
 
    if (c == '-') { // no en-passant
@@ -231,11 +251,11 @@ bool board_from_fen(board_t * board, const char string[]) {
 
    } else {
 
-      if (c < 'a' || c > 'h') my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      if (c < 'a' || c > 'h') fen_fatal("board_from_fen(): bad FEN (invalid en-passant rank at pos=%d)\n",pos,string);
       file = file_from_char(c);
       c = string[++pos];
 
-      if (c < '1' || c > '8') my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      if (c < '1' || c > '8') fen_fatal("board_from_fen(): bad FEN (invalid en-passant file at pos=%d)\n",pos,string);
       rank = rank_from_char(c);
       c = string[++pos];
 
@@ -251,13 +271,13 @@ bool board_from_fen(board_t * board, const char string[]) {
 
    if (c != ' ') {
       if (!Strict) goto update;
-      my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      fen_fatal("board_from_fen(): bad FEN (a space was expected at pos=%d)\n",pos,string);
    }
    c = string[++pos];
 
    if (!isdigit(c)) {
       if (!Strict) goto update;
-      my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      fen_fatal("board_from_fen(): bad FEN (a digit for the halfmove clock was expected at pos=%d)\n",pos,string);
    }
 
    board->ply_nb = atoi(&string[pos]);
@@ -269,13 +289,13 @@ bool board_from_fen(board_t * board, const char string[]) {
 
    if (c != ' ') {
       if (!Strict) goto update;
-      my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      fen_fatal("board_from_fen(): bad FEN (a space was expected at pos=%d)\n",pos,string);
    }
    c = string[++pos];
 
    if (!isdigit(c)) {
       if (!Strict) goto update;
-      my_fatal("board_from_fen(): bad FEN (pos=%d)\n",pos);
+      fen_fatal("board_from_fen(): bad FEN (a digit for the fullmove number was expected at pos=%d)\n",pos,string);
    }
 
    board->move_nb = atoi(&string[pos]) - 1;
